--- a/index.html
+++ b/index.html
@@ -28,11 +28,20 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
+    <div id="container" class="container">
       <!-- Timeblocks go here -->
+<!-- //////////////////////////////////////////////////////////////// -->
+      <!-- <div class="row time-block">
+        <div class="col-md-1 hour">9AM</div>
+        <textarea class="col-md-10 description" name="" id=""></textarea>
+        <button class="col-md-1 btn saveBtn">
+          <i class="fas fa-save"></i>
+        </button>
+      </div>-->
+<!-- //////////////////////////////////////////////////////////////// -->    
     </div>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="/assets/js/script.js"></script>
   </body>
 </html>
